5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4154/executions/1638_651.log
== SUBMITION (2019-04-09 11:13:40) 
-- CODE:
a = float(input("altr"))
b = str(input("sx"))

if b.upper() == M:
	print(round(72.7*a-58,2))
else:
	print(round(62.1*a-44.7,2))

-- EXECUTION TIME:
0.138154
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/651/main.py", line 4, in <module>
    if b.upper() == M:
NameError: name 'M' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:14:10) 
-- CODE:
a = float(input("altr"))
b = str(input("sx"))

if b.upper() == M:
	print(round(72.7*a-58,2))
else:
	print(round(62.1*a-44.7,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if b.upper() == M:
NameError: name 'M' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:14:27) 
-- CODE:
a = float(input("altr: "))
b = str(input("sx:"))

if b.upper() == M:
	print(round(72.7*a-58,2))
else:
	print(round(62.1*a-44.7,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if b.upper() == M:
NameError: name 'M' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:14:31) 
-- CODE:
a = float(input("altr: "))
b = str(input("sx: "))

if b.upper() == M:
	print(round(72.7*a-58,2))
else:
	print(round(62.1*a-44.7,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if b.upper() == M:
NameError: name 'M' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:15:54) 
-- CODE:
a = float(input("altr: "))
b = str(input("sx: "))

if b == M:
	print(round(72.7*a-58,2))
else:
	print(round(62.1*a-44.7,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if b == M:
NameError: name 'M' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:16:13) 
-- CODE:
a = float(input("altr: "))
b = str(input("sx: "))

if (b == M):
	print(round(72.7*a-58,2))
else:
	print(round(62.1*a-44.7,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (b == M):
NameError: name 'M' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:17:09) 
-- CODE:
a = float(input("altr: "))
b = str(input("sx: "))
M = 'M'

if b == M:
	print(round(72.7*a-58,2))
else:
	print(round(62.1*a-44.7,2))

-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:17:30) 
-- CODE:
a = float(input("altr: "))
b = str(input("sx: "))
M = 'M'

if b == M:
	print(round(72.7*a-58,2))
else:
	print(round(62.1*a-44.7,2))

-- EXECUTION TIME:
0.142913
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
17.4
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.71
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:18:35) 
-- CODE:
a = float(input("altr: "))
b = str(input("sx(M ou F): "))
M = 'M'

if b == M:
	print(round(72.7*a-58,2))
else:
	print(round(62.1*a-44.7,2))

-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
